Prevent overscroll refresh on mobile.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 
 html {
   overflow-x: hidden;
+  overscroll-behavior: none;
 }
 
 body {
